[gd_scene load_steps=4 format=1]

[ext_resource path="res://hud/menu/char_select.gd" type="Script" id=1]
[ext_resource path="res://hud/menu/char_select/cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/menu/char_select/char_display.tscn" type="PackedScene" id=3]

[node name="char_select" type="Node2D"]

script/script = ExtResource( 1 )

[node name="list" type="Node2D" parent="."]

[node name="cursor1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 448, 384 )

[node name="cursor2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 576, 384 )

[node name="char_display1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 256, 224 )

[node name="char_display2" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 768, 224 )


